2001-07-10 00:15 UTC+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/Classe.c
     - Hb_ClsScope() Corrected and re-added
     - hb_getRrealclsName() enhanced to keep a better trace of Class tree
     - __ClsInst simplified
     - List of modifs simplified 
   * harbour/include/Hbclass.ch
     - List of modifs simplified 
     - Added a line of explanation for HB_CLS_ENFORCERO
   * harbour/utils/hbmake/hbmake.prg
     - added #ifndef __HARBOUR__ around Function HB_OSNEWLINE()
       to allow compilation with Vc++


2001-07-09 12:58 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * contrib/rdd_ads/ads1.c
     * adsOrderInfo() fixed - before it returned info for current order only in
       many cases.
     * Few fixes, related to adt support
   * contrib/rdd_ads/adsfunc.c
     * some fixes, related to SQL support

2001-07-06 11:40 GMT +1 Ignacio Ortiz <ignacio@ozs.com>
   * source/rtl/mlcount.c
      * fix for tab character expansion buglet

2001-07-05 22:40 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *utils/hbmake/hbmake.prg
      *Fixed an Bug related to creation of makefile when filename and extension
       is all upper cased
   +Support for ! command and !iffile

2001-07-05 01:29 UTC-0800 Brian Hays <bhays@abacuslaw.com>

   * source/rtl/memoline.c
      * Ignacio's fix for tab character expansion buglet

2001-07-02 23:42 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/rtl/tget.prg
     ! Fixed method Reset() of TGet class, so that it sets the :TypeOut
       variable to .F.
       Fix provided by Istvan Foldi <foldii@terrasoft.hu>

2001-06-30 10:30 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/vm/dynsym.c
     + New profiler support functions added
       __DYNSISFUN( nDynSIndex ) --> .t. | .f.
          returns .t. if a dynamic symbol has a function/procedure pointer,
          given its dynamic symbol index.

       __DYNSGETPRF( nDynSIndex ) --> { nTimes, nTime }