@@ -1,3 +1,9 @@
+2001-07-10 01:15 UTC+1 JFL (mafact) <jfl@mafact.com>
+   * harbour/source/vm/Classe.c
+     - Hb_ClsScope() Remed :-((((((((((
+       Sorry not yet ready !
+
+
 2001-07-10 00:15 UTC+1 JFL (mafact) <jfl@mafact.com>
    * harbour/source/vm/Classe.c
      - Hb_ClsScope() Corrected and re-added
